# echo

./: HACKATON_MISTRAL_ALAN.code-workspace  README.md  launch.sh  package-lock.json  package.json
back/: .gitignore  Makefile  app.py  echo.code-workspace  llm.py  pyproject.toml  quiz.py  rag.py
back/data/: quiz_history.json  quizs.json
back/data/memories/1/: metadata.json
back/data/memories/1/texts/: 0  1  1.json  2.json
back/data/memories/2/: metadata.json
back/data/memories/2/texts/: 0  1  1.json  2.json  memory0.txt
back/data/memories/3/: metadata.json
back/data/memories/3/texts/: 1.json  2  2.json
back/data/memories/4/: metadata.json
back/data/memories/4/texts/: 0.json  3.json
back/data/memories/5/: metadata.json
back/data/memories/5/texts/: 0.json  3.json
back/data/memories/6/: metadata.json
back/data/memories/7/: metadata.json
back/data/memories/7/texts/: 1.json
back/data/memories/8/: metadata.json
back/data/memories/8/texts/: 3.json
back/data/memories/9/: metadata.json
back/data/memories/9/texts/: 1.json  2.json  3.json
front/: package-lock.json  package.json  tailwind.config.js
front/public/: index.html
front/src/: App.js  index.js
front/src/components/: Chatbot.js  CreateMemory.js  FamilyManagement.js  MemberRanking.js  Memories.js  Memory.js  ProfileSelection.js  QuizPage.js  QuizRecapSlideshow.js  QuizSlideShow.js  SemanticGraphPage.js  Sidebar.js
