[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.5.13",
    "fastapi>=0.115.0",
    "groq>=0.11.0",
    "langchain-community>=0.3.2",
    "langchain-fireworks>=0.2.1",
    "langchain-mistralai>=0.2.0",
    "langserve>=0.3.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "scipy>=1.14.1",
    "sse-starlette>=2.1.3",
    "uvicorn>=0.31.0",
]
